# Respite

./: .dockerignore  Cargo.toml  Config.toml  Dockerfile  README.md  build.rs
client/: package-lock.json
client/src/: root.tsx
db/: setup.sql
proto/: api.proto  auth.proto  menu.proto  store.proto  waiter.proto
proxy/: docker-compose.yml  envoy.yaml
server/: Cargo.toml  Config.toml  build.rs  setup.sql
server/proto/: funnel.proto  store.proto
server/src/: client.rs  config.rs  funnel.rs  services.rs  store.rs  waiter.rs
server/src/lib/: config.rs  db.rs
server/src/services/: funnel.rs  store.rs
src/: api.rs  auth.rs  menu.rs  services.rs  store.rs  waiter.rs
src/lib/: config.rs  db.rs
src/services/: api.rs  auth.rs  menu.rs  store.rs  waiter.rs
web/: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
web/src/: root.css  root.tsx
web/src/components/: Alert.tsx  EditingItem.tsx  Item.tsx  LoadIn.tsx  Menu.tsx  TransitionIn.tsx
web/src/components/LoadIn/: LoadIn.module.css  LoadIn.tsx
web/src/lib/: stores.ts  types.ts  utils.ts
web/src/routes/: [id].tsx  app.tsx  index.tsx  login.tsx  signup.tsx
web/src/routes/app/: [id].tsx  index.tsx  restaurant.tsx
web/src/services/: ApiServiceClientPb.ts  api.ts  api_pb.d.ts
web/src/services/proto/: api.client.ts  api.ts
web/src/styles/: LoadIn.module.css  TransitionIn.module.css
