[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "store-server"
path = "src/store.rs"

[[bin]]
name = "auth-server"
path = "src/auth.rs"

[dependencies]
toml  = "0.7.1"
serde = { version = "1.0.145", features = ["derive"] }
tonic = "0.8.3"
prost = "0.11.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
uuid = { version = "1.3.0", features = ["v4"] }
jsonwebtoken = "8.2"
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }

[build-dependencies]
tonic-build = "0.8.3"